[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://default_font.tres" type="DynamicFont" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -191.0
margin_top = 76.0
margin_right = 191.0
margin_bottom = 81.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "<Message goes here>"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -50.0
margin_right = 192.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "<Score>"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
